--- a/mensagens.html
+++ b/mensagens.html
@@ -1,15 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <title>Mensagens</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <h1>Mensagens Recebidas</h1>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Luxo - Mensagens</title>
+  <link rel="shortcut icon" href="images/barco2.png" type="image/x-icon">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="js/jquery-3.6.4.min.js"></script>
+  <script>$(document).ready(function() {
+    listarMensagens()
+  })</script>
+</head>
+<body>
+  <div class="page">
+    <header>
+      <div id="title">
+        <img src="images/barco1.png" alt="ícone de barco">
+        <div class="headtitle">
+          <h1>Luxo</h1>
+          <h2>Mensagens</h2>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="pagtitle">
+        <div class="bgtitle"></div>
+        <h2>Mensagens Recebidas</h2>
+      </div>
+      <div id="message-list">
+        <table id="messages-table">
+          <thead>
+            <tr>
+              <th>Nome</th>
+              <th>E-mail</th>
+              <th>Mensagem</th>
+            </tr>
+          </thead>
+          <tbody>
 
-        <div id="tabelaMensagens"></div>
-
-        <script src="script.js"></script>
-    </body>
+          </tbody>
+        </table>
+      </div>
+    </main>
+  </div>
+  <footer>
+    <p>© 2023 por Luxo aluguel de iates</p>
+  </footer>
+  <script src="js/api.js"></script>
+</body>
 </html>
